# Zinnia

./: .gdbinit  .gitignore  .lldbinit  README.md  bootstrap.yml
patches/dbus/: add-zinnia-support.patch
patches/gcc/: add-mlibc-target.patch  add-zinnia-target.patch
patches/glib2/: add-zinnia-support.patch
patches/libgtop/: jinx-working-patch.patch
patches/libudev-devd/: jinx-working-patch.patch
patches/nspr/: jinx-working-patch.patch
patches/nss/: jinx-working-patch.patch
patches/openrc/: add-zinnia-support.patch
patches/python/: add-zinnia-support.patch
patches/xorg-proto/: jinx-working-patch.patch
patches/xorg-server/: jinx-working-patch.patch
pkgs/: apps.yml  dev-lang.yml  dev-libs.yml  meta.yml  sys-boot.yml
src/: .clang-format  .clangd  meson.build  meson.options
src/include/common/: elf.h
src/include/libzinnia/: status.h
src/include/zinnia/: archctl.h  channel.h  handle.h  log.h  mem.h  random.h  rights.h  status.h  syscall_numbers.h  syscall_stubs.h  system.h  thread.h  universe.h
src/kernel/: meson.build
src/kernel/arch/x86_64/: apic.c  gdt.c  idt.c  meson.build  percpu.c  sys.c  syscall.c  usercopy.c
src/kernel/arch/x86_64/include/bits/: irq.h  percpu.h  usercopy.h
src/kernel/arch/x86_64/include/x86_64/: asm.h  defs.h  gdt.h  idt.h  smp.h
src/kernel/boot/: main.c
src/kernel/boot/limine/: entry.c
src/kernel/core/: console.c  elf.c  meson.build  print.c  sched.c  universe.c
src/kernel/include/kernel/: assert.h  channel.h  elf.h  handle.h  init.h  irq.h  mem.h  mutex.h  percpu.h  sched.h  syscalls.h  universe.h  usercopy.h
src/kernel/klibc/: string.c
src/kernel/mem/: init.c  meson.build  mmio.c  pmm.c  pt.c  slab.c  usercopy.c  vmm.c
src/kernel/syscalls/: channel.c  dispatch.c  handle.c  meson.build
src/lib/: meson.build
src/lib/zinnia/: channel.c  handle.c  log.c  meson.build  status.c  syscall_stubs.h
src/servers/: meson.build
src/servers/initd/: main.c  meson.build
src/servers/posixd/: main.c  meson.build  uname.c
src/servers/posixd/include/: vfs.h
support/: Dockerfile  config.guess  meson-x86_64.cross-file  meson.cross-file
support/base-files/etc/: motd  passwd
support/cmake/: CMakeToolchain.txt
support/limine/: limine.conf
tasks/: make-initramfs.sh  make-initramfs.yml  qemu.sh  qemu.yml
tools/: host-autoconf.yml  host-automake.yml  host-binutils.yml  host-cmake.yml  host-gcc.yml  host-libtool.yml  host-llvm.yml  host-meson.yml  host-ovmf-bin.yml  host-pkgconf.yml
